--- a/Gym.Html
+++ b/Gym.Html
@@ -75,7 +75,7 @@
                     <div class="container"></div> 
                     <div class="row"> </div>
                     <div class="col-md-6"></div>
-                    <h2>Get in touch</h2>
+                    <h2>contact us</h2>
                     <div class="contact us-content">
                         Address: Saied street,Tanta <br> Telephone number: 1234567
                        </div>
